--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -110,27 +110,52 @@
 
 @section Scripts {
     <script>
+        const Embed = Quill.import('blots/embed');
+
+        class SpaceDotBlot extends Embed {
+            static create() {
+                const node = super.create();
+                node.textContent = '·';
+                return node;
+            }
+        }
+
+        SpaceDotBlot.blotName = 'spaceDot';
+        SpaceDotBlot.tagName = 'span';
+        SpaceDotBlot.className = 'space-dot';
+
+        Quill.register(SpaceDotBlot);
 
         const quill = new Quill('#editor', {
             theme: 'snow',
             modules: {
-                toolbar: '#toolbar',  // or false if you don’t want toolbar
-                keyboard: {
+                toolbar: '#toolbar',
+                keyboard:{
                     bindings: {
-   
-                        customEnter: {
-                            key: 13,
-                            handler: function (range) {
-                                this.quill.insertText(range.index, '\n');
-                                this.quill.setSelection(range.index + 1);
+                        spaceDot: {
+                            key: ' ',
+                            handler: function (range, context) {
+                                // Insert the SpaceDotBlot at current cursor
+                                quill.insertEmbed(range.index, 'spaceDot', true, Quill.sources.USER);
+                                // Move cursor forward
+                                quill.setSelection(range.index + 2, Quill.sources.SILENT);
+
+                                // Prevent default space
                                 return false;
                             }
                         }
                     }
                 }
+               
             }
         });
 
+        const paragraph = quill.root.querySelector('p');
+        if (paragraph) {
+            paragraph.style.marginBottom = '0px';
+        }
+
+       
 
         document.getElementById('leftMargin').addEventListener('input', function () {
             document.querySelector('.ql-editor').style.paddingLeft = this.value + 'px';
@@ -187,14 +212,15 @@
             div.querySelectorAll('[class*="ql-"]').forEach(el => {
                 el.removeAttribute('class');
             });
-
             return div.innerHTML;
         }
 
 
 
         document.querySelector('form').onsubmit = function () {
+
             const html = cleanQuillHtmlUniversal(quill.root.innerHTML);
+
             document.getElementById('htmlContent').value = html;
         };
 
