--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -24,8 +24,10 @@
             visibility: visible;
         }
 
+       
         .ql-editor p {
             position: relative;
+            white-space: pre-wrap;
         }
 
         .ql-editor p > br:only-child {
